--- a/gift_buy/index.html
+++ b/gift_buy/index.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 	<meta charset="UTF-8">
-	<title>抽獎序號/中獎查詢</title>
-	<meta name='description' content=""/>
+	<title>精華養生會館 - 499福氣袋著走</title>
+	<meta name='description' content="再抽勞力士、LV、3C家電精品好禮，活動期間2019/05/01-2019/06/30"/>
 	<meta name='keywords' content=""/>
 	<meta name="MobileOptimized" content="width">
 	<meta name="HandheldFriendly" content="true">
@@ -24,8 +24,7 @@
 	<script type="text/javascript" src="js/jquery.flipcountdown.js"></script>
 	<script>
 		$(function(){
-		
-			var NY = Math.round((new Date('6/01/2019 00:00:01')).getTime()/1000);
+			var NY = Math.round((new Date('6/30/2019 00:00:01')).getTime()/1000);
 			$('#retroclockbox1').flipcountdown({
 				tick:function(){
 					var nol = function(h){
@@ -66,7 +65,7 @@
 	</header>
 	<main class="main-box">
 		<section class="info-box" id="info-box">
-			<img src="images/img_800x1000.jpg"  alt="" width="100%">
+			<img src="images/img_800x1000.jpg"  alt="精華養生會館 - 499福氣袋著走" width="100%">
 			<div class="content-box">
 				<h1 class="manin-title">499元福袋送⾏充電源 or 無線充電盤(擇⼀)</h1>
 				<h2 class="sub-title c-org">再抽<br>勞⼒⼠50週年年紅字紀念款鬼王<br>LV LOCK IT 經典包</h2>
@@ -111,7 +110,7 @@
 							<td style="width:80px;text-align:center;">秒</td>
 						</tr>
 					</table>
-					
+
 				</div>
 				<p class="p-info">
 					<span class="c-org f-size-l">晶華50週年⽣⽇快樂！</span><br>
@@ -153,22 +152,31 @@
 				</div>
 				<h3 class="product-name">福袋獎項</h3>
 				<div class="bn-box">
-					<img src="images/img_800x800_04.jpg"  alt="" width="100%">
+					<img src="images/img_800x800_04.jpg"  alt="499福袋獎項 壹獎 乙名 勞力士50周年 紅字紀念館 水鬼王" width="100%">
 				</div>
 				<div class="bn-box">
-					<img src="images/img_800x800_05.jpg"  alt="" width="100%">
+					<img src="images/img_800x800_04-1.jpg"  alt="499福袋獎項 壹獎 乙名 勞力士50周年 紅字紀念館 水鬼王" width="100%">
 				</div>
 				<div class="bn-box">
-					<img src="images/img_800x800_06.jpg"  alt="" width="100%">
+					<img src="images/img_800x800_04-2.jpg"  alt="499福袋獎項 壹獎 乙名 勞力士50周年 紅字紀念館 水鬼王" width="100%">
 				</div>
 				<div class="bn-box">
-					<img src="images/img_800x800_07.jpg"  alt="" width="100%">
+					<img src="images/img_800x800_05.jpg"  alt="499福袋獎項 貳獎 乙名 LV LOCK IT 經典手提包" width="100%">
 				</div>
 				<div class="bn-box">
-					<img src="images/img_800x800_08.jpg"  alt="" width="100%">
+					<img src="images/img_800x800_05-1.jpg"  alt="499福袋獎項 貳獎 乙名 LV LOCK IT 經典手提包" width="100%">
 				</div>
 				<div class="bn-box">
-					<img src="images/img_800x800_09.jpg"  alt="" width="100%">
+					<img src="images/img_800x800_06.jpg"  alt="499福袋獎項 叁獎 乙名 PHILIPS LED 背光源高畫質顯示器" width="100%">
+				</div>
+				<div class="bn-box">
+					<img src="images/img_800x800_07.jpg"  alt="499福袋獎項 肆獎 乙名 APPLE iPad wi-fi (32GB)" width="100%">
+				</div>
+				<div class="bn-box">
+					<img src="images/img_800x800_08.jpg"  alt="499福袋獎項 伍獎 乙名 任天堂 Nintendo 5witch" width="100%">
+				</div>
+				<div class="bn-box">
+					<img src="images/img_800x800_09.jpg"  alt="499福袋獎項 叁獎 乙名 PHILIPS LED 背光源高畫質顯示器" width="100%">
 				</div>
 				<div class="bn-box">
 					<img src="images/img_800x800_10.jpg"  alt="" width="100%">
@@ -244,14 +252,15 @@
 					</ul>
 				</div>
 				<div class="fb-box">
-					<div class="fb-page" data-href="https://www.facebook.com/facebook/" data-tabs="timeline" data-width="100%" data-height="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/facebook/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/facebook/">Facebook</a></blockquote></div>
+					<!-- <div class="fb-page" data-href="https://www.facebook.com/facebook/" data-tabs="timeline" data-width="100%" data-height="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/facebook/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/facebook/">Facebook</a></blockquote></div> -->
+					<div class="fb-page" data-href="https://www.facebook.com/%E6%99%B6%E8%8F%AF%E9%A4%8A%E7%94%9F%E6%9C%83%E9%A4%A8-348842531964050/?__tn__=kC-R&amp;eid=ARCLVy2JVRLEqld-VCgaq2BKWer4N5cnKHJ2fdVsIvTPUN3Qy14R0EtWIz-aD5eTs7NN4OaNTPIDusUg&amp;hc_ref=ARQGaf0hVNpKUbAs6VfmEtKQ-S6PVdP11d7GXt1dPB7L5NaehZ0QN87d1QnRL9WOiGc&amp;fref=tag&amp;__xts__%5B0%5D=68.ARBZlFscLop11qD0bjFn8_1RmiCfMUrS7C3-HmxP0gm4VsC8S-cze9gDYtMgQkxxjDyrw8z38fs_BRLJHyqQ338eeMsDU_iMOCw-xxVcFOC_WOxtKl7KiNAhCCRkr_ttNpt_NkicxP4C6HIoHcEm4RyYpuKNFt1TSErdtDoPEhd6MKvURp8mFn3cT15pzYbzjr8X2DX4y2P2NBYBGivpY11q7LT0407vihRavzb_Qmh5P7o5KO11l_xyulK1_WE9S1mmR3Cq04UWs1rO8xeIMocbVNbdhriFNLyW" data-tabs="timeline" data-width="100%" data-height="500" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/%E6%99%B6%E8%8F%AF%E9%A4%8A%E7%94%9F%E6%9C%83%E9%A4%A8-348842531964050/?__tn__=kC-R&amp;eid=ARCLVy2JVRLEqld-VCgaq2BKWer4N5cnKHJ2fdVsIvTPUN3Qy14R0EtWIz-aD5eTs7NN4OaNTPIDusUg&amp;hc_ref=ARQGaf0hVNpKUbAs6VfmEtKQ-S6PVdP11d7GXt1dPB7L5NaehZ0QN87d1QnRL9WOiGc&amp;fref=tag&amp;__xts__%5B0%5D=68.ARBZlFscLop11qD0bjFn8_1RmiCfMUrS7C3-HmxP0gm4VsC8S-cze9gDYtMgQkxxjDyrw8z38fs_BRLJHyqQ338eeMsDU_iMOCw-xxVcFOC_WOxtKl7KiNAhCCRkr_ttNpt_NkicxP4C6HIoHcEm4RyYpuKNFt1TSErdtDoPEhd6MKvURp8mFn3cT15pzYbzjr8X2DX4y2P2NBYBGivpY11q7LT0407vihRavzb_Qmh5P7o5KO11l_xyulK1_WE9S1mmR3Cq04UWs1rO8xeIMocbVNbdhriFNLyW" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/%E6%99%B6%E8%8F%AF%E9%A4%8A%E7%94%9F%E6%9C%83%E9%A4%A8-348842531964050/?__tn__=kC-R&amp;eid=ARCLVy2JVRLEqld-VCgaq2BKWer4N5cnKHJ2fdVsIvTPUN3Qy14R0EtWIz-aD5eTs7NN4OaNTPIDusUg&amp;hc_ref=ARQGaf0hVNpKUbAs6VfmEtKQ-S6PVdP11d7GXt1dPB7L5NaehZ0QN87d1QnRL9WOiGc&amp;fref=tag&amp;__xts__%5B0%5D=68.ARBZlFscLop11qD0bjFn8_1RmiCfMUrS7C3-HmxP0gm4VsC8S-cze9gDYtMgQkxxjDyrw8z38fs_BRLJHyqQ338eeMsDU_iMOCw-xxVcFOC_WOxtKl7KiNAhCCRkr_ttNpt_NkicxP4C6HIoHcEm4RyYpuKNFt1TSErdtDoPEhd6MKvURp8mFn3cT15pzYbzjr8X2DX4y2P2NBYBGivpY11q7LT0407vihRavzb_Qmh5P7o5KO11l_xyulK1_WE9S1mmR3Cq04UWs1rO8xeIMocbVNbdhriFNLyW">晶華養生會館</a></blockquote></div>
 				</div>
 			</div>
 		</section>
 		<footer class="footer_box">
 			<ul class="link clearfix">
 				<li><a href="search.html"><p class="icon_01">抽獎序號/<br>中獎查詢</p></a></li>
-				<li><a href="#" target="_blank"><p class="icon_02">facebook<br>粉絲團</p></a></li>
+				<li><a href="https://www.facebook.com/%E6%99%B6%E8%8F%AF%E9%A4%8A%E7%94%9F%E6%9C%83%E9%A4%A8-348842531964050/?__tn__=kC-R&eid=ARCLVy2JVRLEqld-VCgaq2BKWer4N5cnKHJ2fdVsIvTPUN3Qy14R0EtWIz-aD5eTs7NN4OaNTPIDusUg&hc_ref=ARQGaf0hVNpKUbAs6VfmEtKQ-S6PVdP11d7GXt1dPB7L5NaehZ0QN87d1QnRL9WOiGc&fref=tag&__xts__%5B0%5D=68.ARBZlFscLop11qD0bjFn8_1RmiCfMUrS7C3-HmxP0gm4VsC8S-cze9gDYtMgQkxxjDyrw8z38fs_BRLJHyqQ338eeMsDU_iMOCw-xxVcFOC_WOxtKl7KiNAhCCRkr_ttNpt_NkicxP4C6HIoHcEm4RyYpuKNFt1TSErdtDoPEhd6MKvURp8mFn3cT15pzYbzjr8X2DX4y2P2NBYBGivpY11q7LT0407vihRavzb_Qmh5P7o5KO11l_xyulK1_WE9S1mmR3Cq04UWs1rO8xeIMocbVNbdhriFNLyW" target="_blank"><p class="icon_02">facebook<br>粉絲團</p></a></li>
 				<li><a href="#"><p class="icon_03">隱私權條款</p></a></li>
 			</ul>
 			<p class="Copyright">本活動由xx第三方⾒證<br>
