--- a/gift_buy/search.html
+++ b/gift_buy/search.html
@@ -26,10 +26,6 @@
 					<input id="option" type="radio" name="field" value="2019-05-01 到 2019-07-31期 福袋" checked >
 					<label for="option">2019-05-01 到 2019-07-31期 福袋</label>
 				</li>
-				<!-- <li>
-					<input id="option" type="radio" name="field" value="">
-					<label for="option">2019-05-01 到 2019-07-31期 福袋</label>
-				</li> -->
 			</ul>
 			<div class="content-box">
 				<form>
@@ -55,7 +51,7 @@
 		<footer class="footer_box none_pad">
 			<ul class="link clearfix">
 				<li><a href="search.html"><p class="icon_01">抽獎序號/<br>中獎查詢</p></a></li>
-				<li><a href="#" target="_blank"><p class="icon_02">facebook<br>粉絲團</p></a></li>
+				<li><a href="https://www.facebook.com/%E6%99%B6%E8%8F%AF%E9%A4%8A%E7%94%9F%E6%9C%83%E9%A4%A8-348842531964050/?__tn__=kC-R&eid=ARCLVy2JVRLEqld-VCgaq2BKWer4N5cnKHJ2fdVsIvTPUN3Qy14R0EtWIz-aD5eTs7NN4OaNTPIDusUg&hc_ref=ARQGaf0hVNpKUbAs6VfmEtKQ-S6PVdP11d7GXt1dPB7L5NaehZ0QN87d1QnRL9WOiGc&fref=tag&__xts__%5B0%5D=68.ARBZlFscLop11qD0bjFn8_1RmiCfMUrS7C3-HmxP0gm4VsC8S-cze9gDYtMgQkxxjDyrw8z38fs_BRLJHyqQ338eeMsDU_iMOCw-xxVcFOC_WOxtKl7KiNAhCCRkr_ttNpt_NkicxP4C6HIoHcEm4RyYpuKNFt1TSErdtDoPEhd6MKvURp8mFn3cT15pzYbzjr8X2DX4y2P2NBYBGivpY11q7LT0407vihRavzb_Qmh5P7o5KO11l_xyulK1_WE9S1mmR3Cq04UWs1rO8xeIMocbVNbdhriFNLyW" target="_blank"><p class="icon_02">facebook<br>粉絲團</p></a></li>
 				<li><a href="#"><p class="icon_03">隱私權條款</p></a></li>
 			</ul>
 			<p class="Copyright">本活動由xx第三方⾒證<br>
