--- a/Ad_marketing_sponsorship_2/index.html
+++ b/Ad_marketing_sponsorship_2/index.html
@@ -36,7 +36,7 @@
 	        </div>
             <div class="question-box">
                 <h3 class="title"><span class="big">致</span>未來的大老闆，<br>
-                    在創業的時代要如何崛起，<span class="block">讓我們的專業加入你！</span><span class="none"><br></span>
+                    <span class="green">在創業的時代要如何崛起，<span class="block">讓我們的專業加入你！</span></span><span class="none"><br></span>
                     Holkee 專屬小店服務行銷團隊，<span class="block">替你打造最有效益的廣告行銷方案。</span><span class="none"><br></span>
                     讓你的產業坐上火箭，<span class="block">衝上雲端的世界。</span><span class="none"><br></span>
                     誰說小老闆不能有大大的夢想？<br>
