Update html - meta

--- a/Ad_marketing_sponsorship_2/index.html
+++ b/Ad_marketing_sponsorship_2/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>holkee 廣告行銷贊助計畫</title>
-<meta name='description' content="holkee 專屬小店服務團隊，只有我們在乎你！每月前 100 名申請廣告行銷贊助計畫，即可獲得廣告贊助金 $500-3,000 不等(限量領取)"/>
-<meta name='keywords' content="holkee, 微電商, 廣告, 廣告行銷, 贊助金, 網站, 金物流, 電商, 達標, 生意, 買賣, 協助, 小額廣告預算"/>
+<meta name='description' content="致未來的大老闆，在創業的時代要如何崛起，讓我們的專業加入你！holkee 專屬小店服務行銷團隊，替你打造最有效益的廣告行銷方案。讓你的產業坐上火箭，衝上雲端的世界。"/>
+<meta name='keywords' content="holkee, 微電商, 廣告, 廣告行銷, 贊助金, 網站, 金物流, 電商, 達標, 生意, 買賣, 未來大老闆方案"/>
 <meta property="og:image" content="images/share_pic.png"/>
 <meta property="og:title" content="holkee 廣告行銷贊助計畫"/>
 <meta property="og:url" content="#"/>
-<meta property="og:description" content="holkee 專屬小店服務團隊，只有我們在乎你！每月前 100 名申請廣告行銷贊助計畫，即可獲得廣告贊助金 $500-3,000 不等(限量領取)"/>
+<meta property="og:description" content="致未來的大老闆，在創業的時代要如何崛起，讓我們的專業加入你！holkee 專屬小店服務行銷團隊，替你打造最有效益的廣告行銷方案。讓你的產業坐上火箭，衝上雲端的世界。"/>
 <meta property="og:type" content="content"/>
 
 <meta name="MobileOptimized" content="width">
@@ -37,11 +37,11 @@
             <div class="question-box">
                 <h3 class="title"><span class="big">致</span>未來的大老闆，<br>
                     <span class="green">在創業的時代要如何崛起，<span class="block">讓我們的專業加入你！</span></span><span class="none"><br></span>
-                    Holkee 專屬小店服務行銷團隊，<span class="block">替你打造最有效益的廣告行銷方案。</span><span class="none"><br></span>
+                    holkee 專屬小店服務行銷團隊，<span class="block">替你打造最有效益的廣告行銷方案。</span><span class="none"><br></span>
                     讓你的產業坐上火箭，<span class="block">衝上雲端的世界。</span><span class="none"><br></span>
                     誰說小老闆不能有大大的夢想？<br>
                     創業的繁瑣、不被看見的苦楚，<span class="block">蠟燭兩頭燒的日子該停了！</span><span class="none"><br></span>
-                    給自己一個機會『翻轉未來』，<span class="block">讓 Holkee 專屬小店服務行銷團隊幫助自己，</span><span class="none"><br></span>
+                    給自己一個機會『翻轉未來』，<span class="block">讓 holkee 專屬小店服務行銷團隊幫助自己，</span><span class="none"><br></span>
                     不再讓夢想支配我，而是自己支配理想。
                 </h3>
              </div>
