Update html + css

--- a/Ad_marketing_sponsorship_2/index.html
+++ b/Ad_marketing_sponsorship_2/index.html
@@ -28,29 +28,14 @@
 <body>
 
 <main class="contact-us-box">
-    <section class="main-box">
-        <div class="contents-box clearfix">
-	        <div class="info">
-                <h1 class="logo"><a href="https://www.holkee.com/" target="_blank">holkee</a></h1>
-	        	<h2>廣告行銷贊助計畫</h2>
-	        </div>
-            <div class="question-box">
-                <h3 class="title"><span class="big">致</span>未來的大老闆，<br>
-                    <span class="green">在創業的時代要如何崛起，<span class="block">讓我們的專業加入你！</span></span><span class="none"><br></span>
-                    holkee 專屬小店服務行銷團隊，<span class="block">替你打造最有效益的廣告行銷方案。</span><span class="none"><br></span>
-                    讓你的產業坐上火箭，<span class="block">衝上雲端的世界。</span><span class="none"><br></span>
-                    誰說小老闆不能有大大的夢想？<br>
-                    創業的繁瑣、不被看見的苦楚，<span class="block">蠟燭兩頭燒的日子該停了！</span><span class="none"><br></span>
-                    給自己一個機會『翻轉未來』，<span class="block">讓 holkee 專屬小店服務行銷團隊幫助自己，</span><span class="none"><br></span>
-                    不再讓夢想支配我，而是自己支配理想。
-                </h3>
-             </div>
-	    </div>
-    </section>
     <section class="main-text-box clearfix">
         <div class="abox lbox clearfix">
-             <p>只有我們真正在乎你！<br>
-                <span>holkee 小資廣告 - <span class="block">未來大老闆方案</span></span></p>
+             <!-- <p>只有我們真正在乎你！<br>
+                <span>holkee 小資廣告 - <span class="block">未來大老闆方案</span></span></p> -->
+            <div class="info">
+                <h1 class="logo"><a href="https://www.holkee.com/" target="_blank">holkee</a></h1>
+                <h2>廣告行銷贊助計畫</h2>
+            </div>
         </div>
         <div class="abox rbox clearfix">
             <div class="rbox-w clearfix" >
@@ -82,7 +67,22 @@
             </ul>
         </div>
     </section>
-    <section class="from-box" id="move_goto_01">
+    <section class="main-box">
+        <div class="contents-box clearfix">
+            <div class="question-box">
+                <h3 class="title"><span class="big">致</span>未來的大老闆，<br>
+                    <span class="green">在創業的時代要如何崛起，<span class="block">讓我們的專業加入你！</span></span><span class="none"><br></span>
+                    holkee 專屬小店服務行銷團隊，<span class="block">替你打造最有效益的廣告行銷方案。</span><span class="none"><br></span>
+                    讓你的產業坐上火箭，<span class="block">衝上雲端的世界。</span><span class="none"><br></span>
+                    誰說小老闆不能有大大的夢想？<br>
+                    創業的繁瑣、不被看見的苦楚，<span class="block">蠟燭兩頭燒的日子該停了！</span><span class="none"><br></span>
+                    給自己一個機會『翻轉未來』，<span class="block">讓 holkee 專屬小店服務行銷團隊幫助自己，</span><span class="none"><br></span>
+                    不再讓夢想支配我，而是自己支配理想。
+                </h3>
+             </div>
+        </div>
+    </section>
+    <section class="from-box" id="move_goto_01"><a name="goform"></a>
         <div class="contents-box clearfix">
             <div class="question-box">
                 <h3>領取贊助金或由專人為您服務</h3>
@@ -100,14 +100,6 @@
                         <li class="pos icon_07">
                             <input type="text" class="tbox" value="" size="" placeholder="聯絡E-mail">
                         </li>
-                        <!-- <li class="pos icon_04">
-                            <select class="md-input" name="" required="" data-parsley-min="1" data-parsley-min-message="請選擇廣告方案">
-                                <option value="0" selected="selected" class="gray" style="color: #888;">請選擇廣告方案</option>
-                                <option value="1">holkee 小資廣告方案 - $6,000</option>
-                                <option value="2">holkee 精英廣告方案 - $18,000</option>
-                                <option value="3">holkee VIP 廣告方案 - $48,000</option>
-                                </select>
-                        </li> -->
                     </ul>
                     <div class="btn"><button>確認送出</button></div>
                 </form>
@@ -115,7 +107,7 @@
                 <p class="sub_title">歡迎使用以下方式與我們聯繫</p>
                 <ul class="contactus clearfix">
                     <li><a class="icon_messenger" target="_blank" href="https://www.messenger.com/t/holkeego">Messenger</a></li>
-                    <li><a class="icon_line" class="icon_01" target="_blank" href="https://line.me/R/ti/p/%40bca1493j">LINE</a></li>
+                    <li><a class="icon_line" target="_blank" href="https://line.me/R/ti/p/%40bca1493j">LINE</a></li>
                     <li><a class="icon_email" target="_blank" href="mailto:service@holkee.com">Email</a></li>
                 </ul>
                 <p>客服服務時間為周一至周五，09:00 ~ 18:00<br>我們會盡速回覆您，謝謝！</p>
