Udate html + css

--- a/iiot/app_web/admin/index.html
+++ b/iiot/app_web/admin/index.html
@@ -297,77 +297,77 @@
 	    		<h3 class="top_title">類別項目修改</h3>
 	    		<ul class="list">
 	    			<li class="clearfix">
-	    				<input type="text" name="" value="最多顯示的字最多顯示的字最多顯示的字最多顯示的字">
+	    				<input type="text" name="" value="最多顯示的字最多顯示的字最多顯示的字最多顯示的字" placeholder="請輸入分類名稱">
 	    				<div class="sequence">
 	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
 	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
 	    				</div>
 	    			</li>
 	    			<li class="clearfix" class="clearfix" class="clearfix" class="clearfix">
-	    				<input type="text" name="" value="Category2最多顯示的字">
+	    				<input type="text" name="" value="Category2最多顯示的字" placeholder="請輸入分類名稱">
 	    				<div class="sequence">
 	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
 	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
 	    				</div>
 	    			</li>
 	    			<li class="clearfix" class="clearfix" class="clearfix">
-	    				<input type="text" name="" value="Category3 最多顯示的字最多顯示的字">
+	    				<input type="text" name="" value="Category3 最多顯示的字最多顯示的字" placeholder="請輸入分類名稱">
 	    				<div class="sequence">
 	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
 	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
 	    				</div>
 	    			</li>
 	    			<li class="clearfix" class="clearfix">
-	    				<input type="text" name="" value="Category4">
+	    				<input type="text" name="" value="Category4" placeholder="請輸入分類名稱">
 	    				<div class="sequence">
 	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
 	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
 	    				</div>
 	    			</li>
 	    			<li class="clearfix">
-	    				<input type="text" name="" value="Category5">
+	    				<input type="text" name="" value="Category5" placeholder="請輸入分類名稱">
 	    				<div class="sequence">
 	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
 	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
 	    				</div>
 	    			</li>
 	    			<li class="clearfix">
-	    				<input type="text" name="" value="Category6">
+	    				<input type="text" name="" value="Category6" placeholder="請輸入分類名稱">
 	    				<div class="sequence">
 	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
 	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
 	    				</div>
 	    			</li>
 	    			<li class="clearfix">
-	    				<input type="text" name="" value="Category7">
+	    				<input type="text" name="" value="Category7" placeholder="請輸入分類名稱">
 	    				<div class="sequence">
 	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
 	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
 	    				</div>
 	    			</li>
 	    			<li class="clearfix" class="clearfix">
-	    				<input type="text" name="" value="Category4">
+	    				<input type="text" name="" value="Category4" placeholder="請輸入分類名稱">
 	    				<div class="sequence">
 	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
 	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
 	    				</div>
 	    			</li>
 	    			<li class="clearfix">
-	    				<input type="text" name="" value="Category5">
+	    				<input type="text" name="" value="Category5" placeholder="請輸入分類名稱">
 	    				<div class="sequence">
 	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
 	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
 	    				</div>
 	    			</li>
 	    			<li class="clearfix">
-	    				<input type="text" name="" value="Category6">
+	    				<input type="text" name="" value="Category6" placeholder="請輸入分類名稱">
 	    				<div class="sequence">
 	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
 	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
 	    				</div>
 	    			</li>
 	    			<li class="clearfix">
-	    				<input type="text" name="" value="Category7">
+	    				<input type="text" name="" value="Category7" placeholder="請輸入分類名稱">
 	    				<div class="sequence">
 	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
 	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
