New html + update html & css

--- a/iiot/app_web/admin/index.html
+++ b/iiot/app_web/admin/index.html
@@ -55,7 +55,7 @@
 			<div class="content_box">
 				<ul class="top_type">
 					<li class="btn_in"><p>商品管理</p></li>
-					<li><p>商店管理員</p></li>
+					<li><p><a href="manager.html">商店管理員</a></p></li>
 				</ul>
 				<div class="btn_swtich clearfix">
                     <p class="open">營業狀態</p>
@@ -192,7 +192,7 @@
 	    		</div>
 	    	</div>
 	    	<div class="the_button">
-	    		<a class="btn c_org" class="done" href="#">確認</a>
+	    		<a class="btn c_org" href="#">確認</a>
 	  		</div>
 	    </div>
 
@@ -204,7 +204,7 @@
 	    	</div>
 	    	<div class="the_button">
 	    		<a class="btn" href="#" rel="modal:close">取消</a>
-	    		<a class="btn c_org" class="done" href="#">確認</a>
+	    		<a class="btn c_org" href="#">確認</a>
 	  		</div>
 	    </div>
 
