--- a/iiot/app_web/admin/index.html
+++ b/iiot/app_web/admin/index.html
@@ -24,17 +24,14 @@
     </style>
 
     <script type="text/javascript">
-     // setting_tools 菜單功能
      $(function(){
-	  $("a.btn_setting").click(function(){
+     	// setting_tools 菜單功能
+	  	$("a.btn_setting").click(function(){
 	        $(this).next("ul.setting_tools").stop(true, true).fadeToggle(0);
 	    return false;
 	    });
-	 });
-
-	 // products_tools 商品功能
-	 $(function(){
-	  $("a.more_function").click(function(){
+	 	// products_tools 商品功能
+	  	$("a.more_function").click(function(){
 	        $(this).next("ul.products_tools").stop(true, true).fadeToggle(0);
 	    return false;
 	    });
@@ -43,6 +40,10 @@
 	 //選商品做設定
 	$(function(){
 		$("ul.products_list li" ).click(function() {
+			$(this).toggleClass( "the_selected" );
+			return false;
+		});
+		$(".fadebox .category_list ul.list li p" ).click(function() {
 			$(this).toggleClass( "the_selected" );
 			return false;
 		});
@@ -122,8 +123,9 @@
 	                    </ul>
 					</div>
 					<ul class="products_list clearfix">
-						<li class="clearfix"> <!-- 點選材增加 the_selected 邊框顏色--> <!-- 要幫我寫選取到 >< -->
-							<div class="photo"></div>
+						<li class="clearfix"> <!-- 點選商品增加 the_selected 邊框顏色--> <!-- 要幫我寫選取到 >< -->
+							<div class="photo" style="background-image: url(https://ct.yimg.com/xd/api/res/1.2/oO6C6LuSdbaJqZckv57fVg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD01OTQ7cT04NTtyb3RhdGU9YXV0bzt3PTYxNw--/https://s.yimg.com/ob/image/c21718e2-6b37-4fc1-8245-23299e08e754.jpg);"></div>
+							<!-- <div class="photo" style="background-image: url(<%= product.productImageUrl %>)"></div> -->
 							<div class="product_info">
 								<h3 class="product_title">產品AAA</h3>
 								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
@@ -131,7 +133,7 @@
 							</div>
 						</li>
 						<li class="clearfix">
-							<div class="photo"></div>
+							<div class="photo" style="background-image: url(http://likea.ezvivi.com/manage/0/product/199868/F_m.jpg);"></div>
 							<div class="product_info">
 								<h3 class="product_title">產品BBB</h3>
 								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述</h4>
@@ -139,7 +141,7 @@
 							</div>
 						</li>
 						<li class="clearfix">
-							<div class="photo"></div>
+							<div class="photo" style="background-image: url(https://fpscdn.yam.com/world/201803/6d/27/5aab81bdb6d27.jpg);"></div>
 							<div class="product_info">
 								<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱產品名稱產品名稱</h3>
 								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述針對商品描述的描述針對商品描述的描述...</h4>
@@ -147,7 +149,7 @@
 							</div>
 						</li>
 						<li class="clearfix">
-							<div class="photo"></div>
+							<div class="photo" style="background-image: url(https://icrvb3jy.xinmedia.com/solomo/article/123934/FE1BAAB9-BA80-FEC2-27AD-1BC4B88634E4.jpg);"></div>
 							<div class="product_info">
 								<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱產品名稱產品名稱</h3>
 								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
@@ -155,7 +157,7 @@
 							</div>
 						</li>
 						<li class="clearfix">
-							<div class="photo"></div>
+							<div class="photo" style="background-image: url(https://images.1111.com.tw/discussPic/77/51008577_7297009.2149911.jpg);"></div>
 							<div class="product_info">
 								<h3 class="product_title">產品名稱產品名稱</h3>
 								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
@@ -163,7 +165,7 @@
 							</div>
 						</li>
 						<li class="clearfix">
-							<div class="photo"></div>
+							<div class="photo" style="background-image: url(https://tokyo-kitchen.icook.network/uploads/recipe/cover/209495/large_7b77e24a6d832dd4.jpg);"></div>
 							<div class="product_info">
 								<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
 								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
@@ -171,7 +173,7 @@
 							</div>
 						</li>
 						<li class="clearfix">
-							<div class="photo"></div>
+							<div class="photo" style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3SjvW7r0c5jlj4qMwCIc7pe7FtzuaC_lDJ7jD23nEgS2k2IkH);"></div>
 							<div class="product_info">
 								<h3 class="product_title">產品名稱產品名稱產品名稱產品名稱</h3>
 								<h4 class="sub_info">針對商品描述的描述針對商品描述的描述...</h4>
@@ -291,89 +293,80 @@
 	  		</div>
 	    </div>
 
+	    <!-- 編輯名稱 -->
+	    <div id="edit_category" class="modal fade fadebox">
+	    	<div class="add_new">
+	    		<h3 class="top_title">編輯名稱</h3>
+	    		<input type="text" name="" placeholder="請輸入名稱" value="最多顯示的字最多顯示的字最多顯示的字最多顯示的字">
+	    	</div>
+	    	<div class="the_button">
+	    		<a class="btn" href="#category_tools" rel="modal:open">取消</a>
+	    		<a class="btn c_org" class="done" href="#">確認</a>
+	  		</div>
+	    </div>
+
+	    <!-- 刪除此分類 -->
+	    <div id="delete_category" class="modal fade fadebox">
+	    	<div class="add_new">
+	    		<h3 class="top_title">刪除分類</h3>
+	    		<div class="infobox">
+	    			<p>確認刪除分類<span>「Category3 最多顯示的字最多顯示的字」</span>？</p>
+	    		</div>
+	    	</div>
+	    	<div class="the_button">
+	    		<a class="btn" href="#category_tools" rel="modal:open">取消</a>
+	    		<a class="btn c_org" class="done" href="#">確認</a>
+	  		</div>
+	    </div>
+
 	    <!-- 列表功能 -->
 	    <div id="category_tools" class="modal fade fadebox">
 	    	<div class="category_list">
 	    		<h3 class="top_title">類別項目修改</h3>
 	    		<ul class="list">
 	    			<li class="clearfix">
-	    				<input type="text" name="" value="最多顯示的字最多顯示的字最多顯示的字最多顯示的字" placeholder="請輸入分類名稱">
-	    				<div class="sequence">
-	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
-	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
-	    				</div>
-	    			</li>
-	    			<li class="clearfix" class="clearfix" class="clearfix" class="clearfix">
-	    				<input type="text" name="" value="Category2最多顯示的字" placeholder="請輸入分類名稱">
-	    				<div class="sequence">
-	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
-	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
-	    				</div>
-	    			</li>
-	    			<li class="clearfix" class="clearfix" class="clearfix">
-	    				<input type="text" name="" value="Category3 最多顯示的字最多顯示的字" placeholder="請輸入分類名稱">
-	    				<div class="sequence">
-	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
-	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
-	    				</div>
-	    			</li>
-	    			<li class="clearfix" class="clearfix">
-	    				<input type="text" name="" value="Category4" placeholder="請輸入分類名稱">
-	    				<div class="sequence">
-	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
-	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
-	    				</div>
+	    				<p>最多顯示的字最多顯示的字最多顯示的字最多顯示的字</p>
 	    			</li>
 	    			<li class="clearfix">
-	    				<input type="text" name="" value="Category5" placeholder="請輸入分類名稱">
-	    				<div class="sequence">
-	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
-	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
-	    				</div>
+	    				<p>Category2最多顯示的字</p>
 	    			</li>
 	    			<li class="clearfix">
-	    				<input type="text" name="" value="Category6" placeholder="請輸入分類名稱">
-	    				<div class="sequence">
-	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
-	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
-	    				</div>
+	    				<p>Category3 最多顯示的字最多顯示的字</p>
 	    			</li>
 	    			<li class="clearfix">
-	    				<input type="text" name="" value="Category7" placeholder="請輸入分類名稱">
-	    				<div class="sequence">
-	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
-	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
-	    				</div>
-	    			</li>
-	    			<li class="clearfix" class="clearfix">
-	    				<input type="text" name="" value="Category4" placeholder="請輸入分類名稱">
-	    				<div class="sequence">
-	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
-	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
-	    				</div>
+	    				<p>Category4</p>
 	    			</li>
 	    			<li class="clearfix">
-	    				<input type="text" name="" value="Category5" placeholder="請輸入分類名稱">
-	    				<div class="sequence">
-	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
-	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
-	    				</div>
+	    				<p>Category5</p>
 	    			</li>
 	    			<li class="clearfix">
-	    				<input type="text" name="" value="Category6" placeholder="請輸入分類名稱">
-	    				<div class="sequence">
-	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
-	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
-	    				</div>
+	    				<p>Category6</p>
 	    			</li>
 	    			<li class="clearfix">
-	    				<input type="text" name="" value="Category7" placeholder="請輸入分類名稱">
-	    				<div class="sequence">
-	    					<a href=""><i class="fas fa-long-arrow-alt-up"></i></a>
-	    					<a href=""><i class="fas fa-long-arrow-alt-down"></i></a>
-	    				</div>
+	    				<p>Category7</p>
+	    			</li>
+	    			<li class="clearfix">
+	    				<p>Category8</p>
+	    			</li>
+	    			<li class="clearfix">
+	    				<p>Category9</p>
+	    			</li>
+	    			<li class="clearfix">
+	    				<p>Category10</p>
+	    			</li>
+	    			<li class="clearfix">
+	    				<p>Category11</p>
 	    			</li>
 	    		</ul>
+	    		<div class="sequence">
+	    			<!-- 沒點選時不能按 + disabled -->
+	    			<a class="disabled" href="#edit_category" rel="modal:open"><i class="fas fa-edit"></i> 編輯</a>
+	    			<a class="disabled" href="#"><i class="fas fa-arrow-up"></i> 置頂</a>
+	    			<a href="#"><i class="fas fa-long-arrow-alt-up"></i></a>
+	    			<a href="#"><i class="fas fa-long-arrow-alt-down"></i></a>
+	    			<a href="#delete_category" rel="modal:open"><i class="far fa-trash-alt"></i></a>
+	    			<!-- <a href=""><i class="fas fa-arrow-down"></i></a> -->
+	    		</div>
 	    	</div>
 	    	<div class="the_button">
 	    		<a class="btn" href="#" rel="modal:close">取消</a>
